--- a/_data/--legacy/LexiconMassTemplate.html
+++ b/_data/--legacy/LexiconMassTemplate.html
@@ -10,8 +10,7 @@
 <link href='//fonts.googleapis.com/css?family=EB+Garamond:400,400italic&amp;subset=cyrillic,latin-ext' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="/css/tufte.css">
 <link rel="stylesheet" type="text/css" href="/css/print.css" media="print">
-<!---  <link rel="canonical" href="https://bh.seveleu.com/16"> ---->
-  <link rel="alternate" type="application/rss+xml" title="Biblical Hebrew for Linguists" href="https://bh.seveleu.com/feed.xml" /><style>span#toc{{padding: 9px;padding-left: 0px;display:inline-block;}}</style>
+  <link rel="alternate" type="application/rss+xml" title="Biblical Hebrew for Linguists" href="{{site.website}}/feed.xml" /><style>span#toc{{padding: 9px;padding-left: 0px;display:inline-block;}}</style>
 </head>
 <body>
 <header>
