--- a/_data/--legacy/LexiconEntryTemplate.html
+++ b/_data/--legacy/LexiconEntryTemplate.html
@@ -10,7 +10,7 @@
 <link href='//fonts.googleapis.com/css?family=EB+Garamond:400,400italic&amp;subset=cyrillic,latin-ext' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="/css/tufte.css">
 <link rel="stylesheet" type="text/css" href="/css/print.css" media="print">
-  <link rel="alternate" type="application/rss+xml" title=" {} — {} «{}» (Strong's {} )— Biblical Hebrew for Linguists" href="https://bh.seveleu.com/feed.xml" /><style>#s{{font-size:132%;color:cadetblue;font-style: italic;}}</style>
+  <link rel="alternate" type="application/rss+xml" title=" {} — {} «{}» (Strong's {} )— Biblical Hebrew for Linguists" href="{{site.website}}/feed.xml" /><style>#s{{font-size:132%;color:cadetblue;font-style: italic;}}</style>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
 <script type="text/javascript">
 document.onkeydown = function(evt) {{
