--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <!DOCTYPE html>
 {% include head.html %}
-<h3></h3><p style="width:95%">{{site.index2intro}} <span class="lexframe"><img style='width:1.3rem;' src='/assets/img/frequency.svg'></span>, {{site.index3intro}} — <span class="lexframe">αβ</span>.</p>
+<h3></h3><p style="width:95%">{{site.index2intro}} <span class="lexframe"><img style='width:1.3rem;' src='/{{site.siteprefix}}/assets/img/frequency.svg'></span>, {{site.index3intro}} — <span class="lexframe">αβ</span>.</p>
 {% include landingpartiallexicons.html tag="general" grid=site.grid4 coefficient=site.coefficient4 punchline=site.index4general pref="<strong>" suf="</strong>" size=site.size4 %}
 {% include landingpartiallexicons.html tag="pos-content" grid=site.grid5 coefficient=site.coefficient5 punchline=site.index5contentful pref="<strong>" suf="</strong>" size=site.size5%}
 {% include landingpartiallexicons.html tag="pos-function" grid=site.grid6 coefficient=site.coefficient6 punchline=site.index6functional pref="" suf="" size=site.size6 %}
